hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__emit_hugr_load_constant@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i2, i16 } @_hl.main.1() !dbg !3 {
alloca_block:
  %"0" = alloca { i2, i16 }, align 8
  %"5_0" = alloca { i2, i16 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i2, i16 } { i2 -2, i16 -24 }, ptr %"5_0", align 2
  %"5_01" = load { i2, i16 }, ptr %"5_0", align 2
  store { i2, i16 } %"5_01", ptr %"0", align 2
  %"02" = load { i2, i16 }, ptr %"0", align 2
  ret { i2, i16 } %"02"
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/PNzlVLClAphFGIyrhvZsHeD")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25761, type: !5, scopeLine: 25762, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i2, i16 }", file: !2, size: 2, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "i2", size: 2, encoding: DW_ATE_unsigned)
!10 = !DIBasicType(name: "i16", size: 16, encoding: DW_ATE_unsigned)
