hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__load_function@llvm14.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal void ()* @_hl.main.2() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret void ()* @_hl.target_func.1
}

declare void @_hl.target_func.1()
