hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__load_function@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal ptr @_hl.main.2() !dbg !3 {
alloca_block:
  %"0" = alloca ptr, align 8
  %"5_0" = alloca ptr, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr @_hl.target_func.1, ptr %"5_0", align 8
  %"5_01" = load ptr, ptr %"5_0", align 8
  store ptr %"5_01", ptr %"0", align 8
  %"02" = load ptr, ptr %"0", align 8
  ret ptr %"02"
}

declare void @_hl.target_func.1()

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/PNzlVLClAphFGIyrhvZsHeD")
!3 = distinct !DISubprogram(name: "_hl.main.2", linkageName: "_hl.main.2", scope: null, file: !4, line: 25761, type: !5, scopeLine: 25762, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
